--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel='stylesheet'a href="styles.css">
-</div>
+    <ul>
+        <li><strong><a href="index.html">About</a></strong></li>
+        <li><a href="blog.html">Blog</a></li>
+    </ul>
 </head>
 <body>
     <h2>Infosec with Sir Humphr3y</h2>
    <p>Sir Humphr3y</p>  <p><a href="https://twitter.com/josephdpower">Twitter: @josephdpower</a></p>
         
-       <br><p>
-           Hi! This is a tiny little project I've put together as part of the curriculum offered by the fine people over at <a href="https://hoppersroppers.org">Hopper's Roppers</a>. I don't really have a clue what I'm doing, but learning is fun.
-        <br><p>Feel free to get in touch with me on <a href="https:twitter.com/josephdpower">Twitter</a> if you ever want to chat.</p></body>
+       <p>Hi! This is a tiny little project I've put together as part of the curriculum offered by the fine people over at <a href="https://hoppersroppers.org">Hopper's Roppers</a>. I don't really have a clue what I'm doing, but learning is fun.
+        <br><p>Feel free to get in touch with me on Twitter (link above) if you ever want to chat.</p></body>
 </html>
